  once when a size argument is given. This prevents a buffer overflow in the
  tokenizer with very long source lines.

- Bug #1083110: ``zlib.decompress.flush()`` would segfault if called immediately
  after creating the object, without any intervening ``.decompress()`` calls.

- Bug #1149508: ``textwrap`` now handles hyphenated numbers (eg. "2004-03-05")
  correctly.


Build
-----

- term.h is now properly detected again.

- Check for tzset no longer dependent on tm->tm_zone to exist in the struct
  (not required by either ISO C nor the UNIX 2 spec).
  Tests for sanity in tzname when HAVE_TZNAME defined were also defined.
  Closes bug #1096244.  Thanks Gregory Bond.


Windows
-------

- Bug #1076861: The IDLE shortcut is now correct even if the target
  directory contains a space.

- Bug #1085208 and similar: The installer does not fail anymore if
  VBScript is not available on the target machine, not installed
  properly, or outdated; the MSI package now does not rely on VB
  anymore.

Macintosh
---------

- Bug #1091468: make frameworkinstall now works with DESTROOT builds

- On 10.3 and later extensions are built with -undefined dynamic_lookup.
  This ensures that extensions can be built in older versions of Python after
  a newer framework has been installed. In addition, an extension will not 
  accidentally pull in another copy of the Python interpreter.
  
  On 10.2 and earlier (or if MACOSX_DEPLOYMENT_TARGET is set to a value <= 10.2)
  extensions are linked directly to the dylib in the framework, in stead
  of against the framework itself. This ensures that extensions can be built
  in older versions of Python after a newer framework has been installed.

- PackageManager and the underlying pimp.py module have been updated to
  version 0.5, which greatly simplifies maintainance of the package
  databases.


Documentation
-------------

- Remove all latent references for "Macintosh" that referred to semantics for